--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,79 +6,73 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1315</width>
-    <height>695</height>
+    <width>1997</width>
+    <height>1230</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QLineEdit" name="username">
+   <widget class="QPushButton" name="planATripButton">
     <property name="geometry">
      <rect>
-      <x>810</x>
-      <y>420</y>
-      <width>321</width>
-      <height>61</height>
+      <x>1080</x>
+      <y>820</y>
+      <width>391</width>
+      <height>191</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <family>MV Boli</family>
-     </font>
-    </property>
     <property name="text">
-     <string/>
-    </property>
-    <property name="maxLength">
-     <number>10</number>
-    </property>
-    <property name="placeholderText">
-     <string>Username</string>
-    </property>
-    <property name="clearButtonEnabled">
-     <bool>true</bool>
+     <string>Plan A Trip</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="password">
+   <widget class="QPushButton" name="displayInformationButton">
     <property name="geometry">
      <rect>
-      <x>810</x>
-      <y>480</y>
-      <width>321</width>
-      <height>61</height>
+      <x>1470</x>
+      <y>820</y>
+      <width>401</width>
+      <height>191</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <family>MV Boli</family>
-     </font>
-    </property>
     <property name="text">
-     <string/>
-    </property>
-    <property name="placeholderText">
-     <string>Password</string>
-    </property>
-    <property name="clearButtonEnabled">
-     <bool>true</bool>
+     <string>Display Information</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="login">
+   <widget class="QPushButton" name="adminButton">
     <property name="geometry">
      <rect>
-      <x>810</x>
-      <y>550</y>
-      <width>71</width>
-      <height>31</height>
+      <x>1350</x>
+      <y>1010</y>
+      <width>251</width>
+      <height>121</height>
      </rect>
     </property>
     <property name="text">
-     <string>Login</string>
+     <string>Admin</string>
     </property>
    </widget>
   </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1997</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QToolBar" name="mainToolBar">
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
