--- a/planatrip.ui
+++ b/planatrip.ui
@@ -6,24 +6,70 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>837</width>
+    <height>519</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="parisTrip">
    <property name="geometry">
     <rect>
      <x>120</x>
      <y>160</y>
-     <width>80</width>
-     <height>20</height>
+     <width>111</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Adfkjsafi</string>
+    <string>Plan A Trip From Paris</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="londonTrip">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>200</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Plan A Trip From London</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="customTrip">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>240</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Plan A Custom Trip</string>
+   </property>
+  </widget>
+  <widget class="QListView" name="places">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>140</y>
+     <width>256</width>
+     <height>192</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QListView" name="food">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>140</y>
+     <width>256</width>
+     <height>192</height>
+    </rect>
    </property>
   </widget>
  </widget>
