--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,75 +6,126 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1997</width>
-    <height>1230</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="planATripButton">
-    <property name="geometry">
-     <rect>
-      <x>180</x>
-      <y>60</y>
-      <width>391</width>
-      <height>191</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Plan A Trip</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="displayInformationButton">
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QPushButton" name="ChoosePath_pushButton">
     <property name="geometry">
      <rect>
       <x>570</x>
-      <y>60</y>
-      <width>401</width>
-      <height>191</height>
+      <y>450</y>
+      <width>93</width>
+      <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>Display Information</string>
+     <string>Choose Path</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="adminButton">
+   <widget class="QListView" name="EndCityList">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>250</y>
-      <width>251</width>
-      <height>121</height>
+      <x>540</x>
+      <y>100</y>
+      <width>101</width>
+      <height>251</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QListView" name="DistanceList">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>100</y>
+      <width>91</width>
+      <height>251</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="From_ComboBox">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>60</y>
+      <width>101</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="StartCityTextEdit">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>100</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Paris_PushButton">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>450</y>
+      <width>93</width>
+      <height>28</height>
      </rect>
     </property>
     <property name="text">
-     <string>Admin</string>
+     <string>Start at Paris</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="To_ComboBox">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>60</y>
+      <width>101</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Save_Route_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>450</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save Route</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="Route_TextEdit">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>100</y>
+      <width>251</width>
+      <height>211</height>
+     </rect>
     </property>
    </widget>
   </widget>
-  <widget class="QMenuBar" name="menuBar">
+  <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1997</width>
-     <height>20</height>
+     <width>800</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
-  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
