--- a/admin.ui
+++ b/admin.ui
@@ -6,74 +6,190 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>852</width>
-    <height>443</height>
+    <width>875</width>
+    <height>472</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLineEdit" name="username">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>240</y>
-     <width>113</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="inputMask">
-    <string>Username</string>
-   </property>
-   <property name="text">
-    <string>Username</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="password">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>270</y>
-     <width>113</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="inputMask">
-    <string/>
-   </property>
-   <property name="text">
-    <string>Password</string>
-   </property>
-   <property name="maxLength">
-    <number>32767</number>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="login">
-   <property name="geometry">
-    <rect>
-     <x>360</x>
-     <y>300</y>
-     <width>80</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Login</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>360</x>
-     <y>180</y>
-     <width>71</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>ADMIN LOGIN</string>
-   </property>
-  </widget>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="font">
+      <font>
+       <family>Niagara Engraved</family>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Vacation Spots</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>FOOD NAME</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QComboBox" name="comboBox">
+     <item>
+      <property name="text">
+       <string>CITY</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Amsterdam</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Berlin</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Brussels</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Budapest</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Hamburg</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Lisbon</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>London</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Madrid</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Paris</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Prague</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Rome</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Stockholm</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Vienna</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="lineEdit"/>
+   </item>
+   <item row="2" column="0" rowspan="13">
+    <widget class="QTableView" name="tableView"/>
+   </item>
+   <item row="2" column="1">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>FOOD PRICE</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QLineEdit" name="lineEdit_2"/>
+   </item>
+   <item row="4" column="1">
+    <widget class="QPushButton" name="pushButton">
+     <property name="text">
+      <string>Add Food</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>===============</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QLabel" name="label_5">
+     <property name="text">
+      <string>FOOD NAME</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="1">
+    <widget class="QLineEdit" name="lineEdit_3"/>
+   </item>
+   <item row="8" column="1">
+    <widget class="QPushButton" name="pushButton_2">
+     <property name="text">
+      <string>Remove Food</string>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="1">
+    <widget class="QLabel" name="label_6">
+     <property name="text">
+      <string>===============</string>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="1">
+    <widget class="QLabel" name="label_7">
+     <property name="text">
+      <string>FOOD NAME</string>
+     </property>
+    </widget>
+   </item>
+   <item row="11" column="1">
+    <widget class="QLineEdit" name="lineEdit_4"/>
+   </item>
+   <item row="12" column="1">
+    <widget class="QLabel" name="label_8">
+     <property name="text">
+      <string>NEW PRICE</string>
+     </property>
+    </widget>
+   </item>
+   <item row="13" column="1">
+    <widget class="QLineEdit" name="lineEdit_5"/>
+   </item>
+   <item row="14" column="1">
+    <widget class="QPushButton" name="pushButton_3">
+     <property name="text">
+      <string>Set New Price</string>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
