--- a/admin.ui
+++ b/admin.ui
@@ -15,77 +15,26 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="8" column="1">
-    <widget class="QPushButton" name="pushButton_2">
-     <property name="text">
-      <string>Remove Food</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="1">
-    <widget class="QLabel" name="label_5">
-     <property name="text">
-      <string>FOOD NAME</string>
-     </property>
-    </widget>
-   </item>
-   <item row="10" column="1">
-    <widget class="QLabel" name="label_7">
-     <property name="text">
-      <string>FOOD NAME</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="1">
-    <widget class="QPushButton" name="pushButton">
-     <property name="text">
-      <string>Add Food</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="1">
     <widget class="QLineEdit" name="lineEdit_3"/>
    </item>
-   <item row="2" column="0" rowspan="13">
-    <widget class="QTableView" name="tableView"/>
-   </item>
-   <item row="0" column="1">
-    <widget class="QLabel" name="label_2">
+   <item row="15" column="1">
+    <widget class="QPushButton" name="pushButton_3">
      <property name="text">
-      <string>FOOD NAME</string>
+      <string>Set New Price</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="16" column="0">
+    <widget class="QPushButton" name="pushButton_4">
+     <property name="text">
+      <string>Add New Cities</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>FOOD PRICE</string>
-     </property>
-    </widget>
-   </item>
-   <item row="12" column="1">
-    <widget class="QLabel" name="label_8">
-     <property name="text">
-      <string>NEW PRICE</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="1">
-    <widget class="QLabel" name="label_4">
-     <property name="text">
-      <string>===============</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="label">
-     <property name="font">
-      <font>
-       <family>Niagara Engraved</family>
-       <pointsize>20</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Vacation Spots</string>
      </property>
     </widget>
    </item>
@@ -163,40 +112,101 @@
      </item>
     </widget>
    </item>
-   <item row="14" column="1">
-    <widget class="QPushButton" name="pushButton_3">
+   <item row="13" column="1">
+    <widget class="QLabel" name="label_8">
      <property name="text">
-      <string>Set New Price</string>
+      <string>NEW PRICE</string>
      </property>
     </widget>
    </item>
-   <item row="13" column="1">
-    <widget class="QLineEdit" name="lineEdit_5"/>
+   <item row="12" column="1">
+    <widget class="QLineEdit" name="lineEdit_4"/>
    </item>
-   <item row="9" column="1">
+   <item row="5" column="1">
+    <widget class="QPushButton" name="pushButton">
+     <property name="text">
+      <string>Add Food</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="1">
+    <widget class="QLabel" name="label_5">
+     <property name="text">
+      <string>FOOD NAME</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QLineEdit" name="lineEdit_2"/>
+   </item>
+   <item row="10" column="1">
     <widget class="QLabel" name="label_6">
      <property name="text">
       <string>===============</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="lineEdit">
-     <property name="inputMask">
-      <string>A</string>
+   <item row="11" column="1">
+    <widget class="QLabel" name="label_7">
+     <property name="text">
+      <string>FOOD NAME</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="1">
-    <widget class="QLineEdit" name="lineEdit_4"/>
+   <item row="3" column="0" rowspan="13">
+    <widget class="QTableView" name="tableView"/>
    </item>
-   <item row="3" column="1">
-    <widget class="QLineEdit" name="lineEdit_2"/>
-   </item>
-   <item row="15" column="0">
-    <widget class="QPushButton" name="pushButton_4">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="font">
+      <font>
+       <family>Niagara Engraved</family>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
      <property name="text">
-      <string>Add New Cities</string>
+      <string>Vacation Spots</string>
+     </property>
+    </widget>
+   </item>
+   <item row="14" column="1">
+    <widget class="QLineEdit" name="lineEdit_5"/>
+   </item>
+   <item row="9" column="1">
+    <widget class="QPushButton" name="pushButton_2">
+     <property name="text">
+      <string>Remove Food</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="inputMask">
+      <string/>
+     </property>
+     <property name="maxLength">
+      <number>32767</number>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="1">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>===============</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>FOOD NAME</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QLabel" name="label_9">
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
