--- a/displayinformation.ui
+++ b/displayinformation.ui
@@ -13,8 +13,8 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
       <number>0</number>
@@ -23,11 +23,11 @@
       <attribute name="title">
        <string>Amsterdam</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="0">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
         <widget class="QTableView" name="tableView"/>
        </item>
-       <item row="0" column="1">
+       <item>
         <widget class="QPushButton" name="pushButton_2">
          <property name="text">
           <string>Refresh</string>
@@ -240,6 +240,13 @@
        </item>
       </layout>
      </widget>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="pushButton">
+     <property name="text">
+      <string>Plan A Trip</string>
+     </property>
     </widget>
    </item>
   </layout>
